feat: Implement write queue functionality for offline operations
- Add DefaultWriteQueueExecutor to handle execution of write operations such as album and track requests, playlist edits, and favourites.
- Introduce WriteQueue to manage the journaling of offline mutations, ensuring operations are queued and replayed in sequence.
- Create WriteQueueFlusher to process the queued operations upon reconnection, adhering to defined rules for order and error handling.
- Define WriteQueuePayloads for serializing and deserializing write operations, ensuring backward compatibility with older versions.
- Enhance the handling of scrobbles to resolve track IDs at flush time, preventing issues with file ID changes.